--- a/pages/apps.html
+++ b/pages/apps.html
@@ -21,5 +21,9 @@
         <h1 id="header1">
             Welcome to my apps page!
         </h1>
+        <p>
+            This is a parahraph. Paragraphs are cool. Paragraphs can be<br>
+            used to fill-in empty spaces so URI professors won't get mad.
+        </p>
     </body>
 </html>
