--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -5,7 +5,7 @@
         <script src="../js/scripts.js"></script>
         <meta charset="utf-8">
         <title>
-            Apps
+            Javascript
         </title>
     </head>
     <body>
@@ -40,7 +40,7 @@
                 </div>
                 <div id="contentBody">
                     <h1 id="headline">
-                        Welcome to my Apps page!
+                        Welcome to my Javascript page!
                     </h1>
                     <p id="bodyParagraph">
                         This is a parahraph. Paragraphs are cool. Paragraphs can be<br>
