--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -5,7 +5,7 @@
         <script src="../js/scripts.js"></script>
         <meta charset="utf-8">
         <title>
-            Apps
+            About Me
         </title>
     </head>
     <body>
@@ -40,11 +40,46 @@
                 </div>
                 <div id="contentBody">
                     <h1 id="headline">
-                        Welcome to my Apps page!
+                        Welcome to my About Me page!
                     </h1>
+                    <div id="gallery">
+                        <img class="aboutmePhoto" id="gabriel_ives" src="../img/gabriel_ives.jpg">
+                        <img class="aboutmePhoto" src="../img/gabriel_ives_2.jpg">
+                    </div>
                     <p id="bodyParagraph">
-                        This is a parahraph. Paragraphs are cool. Paragraphs can be<br>
-                        used to fill-in empty spaces so URI professors won't get mad.
+                        Hey! I think you already know my name, but I'll say it <br> 
+                        again anyway. My name is Gabriel Ives. I've always loved <br>
+                        computers, and am currently majoring in computer <br>
+                        engineering. <br>
+                        <br>
+                        My hobbies include: <br>
+                        <br>
+                        Ultimate frisbee <br>
+                        <br>
+                        <div class="hobbiesPictures"><img class="aboutmePhoto" src="../img/ultimateFrisbee.jpg"></div>
+                        <br>
+                        <br>
+                        Video games <br>
+                        <br>
+                        <div class="hobbiesPictures"><img class="aboutmePhoto" src="../img/videoGames.png"></div>
+                        <br>
+                        <br>
+                        And Kenpo Karate <br>
+                        <br>
+                        <div class="hobbiesPictures"><img class="aboutmePhoto" src="../img/kenpoKarate.png"></div>
+                        <br>
+                        <br>
+                        <br>
+                        Social-media links: <br>
+                        <br>
+                        <br>
+                        Instagram: <a href="https://www.instagram.com/thatguygabe0104">thatguygabe0104</a><br>
+                        <br>
+                        LinkedIn: <a href="https://www.linkedin.com/in/gabriel-ives-a52939135/">Gabriel Ives</a><br>
+                        <br>
+                        Snapchat: <br>
+                        <br>
+                        <div class="hobbiesPictures"><img class="aboutmePhoto" src="../img/snapchatLink.jpg"></div>
                     </p>
                 </div>
             </div>
