--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -42,10 +42,24 @@
                     <h1 id="headline">
                         Welcome to my Javascript page!
                     </h1>
-                    <p id="bodyParagraph">
-                        This is a parahraph. Paragraphs are cool. Paragraphs can be<br>
-                        used to fill-in empty spaces so URI professors won't get mad.
-                    </p>
+                    <div id="scriptContainer">
+                        <h2>
+                            <a href="https://www.khanacademy.org/computer-programming/ives_bitmoji/5492252108095488">ives_bitmoji</a>
+                        </h2>
+                        <script src="https://www.khanacademy.org/computer-programming/ives_bitmoji/5492252108095488/embed.js?editor=yes&buttons=yes&author=yes&embed=yes">
+                        </script>
+                        <p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
+                        </p>
+                    </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            <a href="https://www.khanacademy.org/computer-programming/ives_dancingbitmoji/6292502192291840">ives_dancingBitmoji</a>
+                        </h2>
+                        <script src="https://www.khanacademy.org/computer-programming/ives_dancingbitmoji/6292502192291840/embed.js?editor=yes&buttons=yes&author=yes&embed=yes">
+                        </script>
+                        <p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
