--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -60,6 +60,15 @@
                         <p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
                         </p>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            <a href="https://www.khanacademy.org/computer-programming/ives_racingbitmoji/6488301428768768">ives_racingBitmoji</a>
+                        </h2>
+                        <script src="https://www.khanacademy.org/computer-programming/ives_racingbitmoji/6488301428768768/embed.js?editor=yes&buttons=yes&author=yes&embed=yes">
+                        </script>
+                        <p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
