--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -44,30 +44,51 @@
                     </h1>
                     <div id="scriptContainer">
                         <h2>
-                            <a href="https://www.khanacademy.org/computer-programming/ives_bitmoji/5492252108095488">ives_bitmoji</a>
+                            ives_bitmoji
                         </h2>
-                        <script src="https://www.khanacademy.org/computer-programming/ives_bitmoji/5492252108095488/embed.js?editor=yes&buttons=yes&author=yes&embed=yes">
-                        </script>
-                        <p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
-                        </p>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_bitmoji/5492252108095488">
+                            <img id="scriptImg" src="../img/ives_bitmoji.png">
+                        </a>
                     </div>
                     <div id="scriptContainer">
                         <h2>
-                            <a href="https://www.khanacademy.org/computer-programming/ives_dancingbitmoji/6292502192291840">ives_dancingBitmoji</a>
+                            ives_dancingBitmoji
                         </h2>
-                        <script src="https://www.khanacademy.org/computer-programming/ives_dancingbitmoji/6292502192291840/embed.js?editor=yes&buttons=yes&author=yes&embed=yes">
-                        </script>
-                        <p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
-                        </p>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_dancingbitmoji/6292502192291840">
+                            <img id="scriptImg" src="../img/ives_dancingBitmoji.png">
+                        </a>
                     </div>
                     <div id="scriptContainer">
                         <h2>
-                            <a href="https://www.khanacademy.org/computer-programming/ives_racingbitmoji/6488301428768768">ives_racingBitmoji</a>
+                            ives_racingBitmoji
                         </h2>
-                        <script src="https://www.khanacademy.org/computer-programming/ives_racingbitmoji/6488301428768768/embed.js?editor=yes&buttons=yes&author=yes&embed=yes">
-                        </script>
-                        <p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a>
-                        </p>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_racingbitmoji/6488301428768768">
+                            <img id="scriptImg" src="../img/ives_racingBitmoji.png">
+                        </a>
+                    </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_dancingBitmojiFun
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_dancingbitmojifun/5304157275389952">
+                            <img id="scriptImg" src="../img/ives_dancingBitmojiFun.png">
+                        </a>
+                    </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_racingFun
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_racingfun/5054732015730688">
+                            <img id="scriptImg" src="../img/ives_racingFun.png">
+                        </a>
+                    </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_resizeBitmoji
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_resizebitmoji/4587834536853504">
+                            <img id="scriptImg" src="../img/ives_resizeBitmoji.png">
+                        </a>
                     </div>
                 </div>
             </div>
