--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -90,6 +90,22 @@
                             <img id="scriptImg" src="../img/ives_resizeBitmoji.png">
                         </a>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_Quiz
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_quiz/5208510153064448">
+                            <img id="scriptImg" src="../img/ives_Quiz.png">
+                        </a>
+                    </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_Follow
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_follow/5847571414876160">
+                            <img id="scriptImg" src="../img/ives_Follow.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
