--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -106,6 +106,22 @@
                             <img id="scriptImg" src="../img/ives_Follow.png">
                         </a>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_Formated_Integers
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_formated_integers/5845323633623040">
+                            <img id="scriptImg" src="../img/ives_Formated_Integers.png">
+                        </a>
+                    </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_Bitmoji_Line
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_bitmoji_line/5363776799342592">
+                            <img id="scriptImg" src="../img/ives_Bitmoji_Line.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
