--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -122,6 +122,14 @@
                             <img id="scriptImg" src="../img/ives_Bitmoji_Line.png">
                         </a>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_DryBitmoji
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/lastname_drybitmojigame/6200979182026752">
+                            <img id="scriptImg" src="../img/ives_DryBitmoji.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
