--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -127,7 +127,7 @@
                             ives_DryBitmoji
                         </h2>
                         <a href="https://www.khanacademy.org/computer-programming/lastname_drybitmojigame/6200979182026752">
-                            <img id="scriptImg" src="../img/ives_DryBitmoji.png">
+                            <img id="scriptImg" src="../img/ives_DryBitmoji.ng">
                         </a>
                     </div>
                 </div>
