--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -130,6 +130,14 @@
                             <img id="scriptImg" src="../img/ives_DryBitmoji.png">
                         </a>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_Wardrobe
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_wardrobe/5637936386637824">
+                            <img id="scriptImg" src="../img/ives_Wardrobe.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
