--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -138,6 +138,14 @@
                             <img id="scriptImg" src="../img/ives_Wardrobe.png">
                         </a>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_EducationalApp
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_educationalapp/5088612705599488">
+                            <img id="scriptImg" src="../img/ives_EducationalApp.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
