--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -146,6 +146,14 @@
                             <img id="scriptImg" src="../img/ives_EducationalApp.png">
                         </a>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_Frogger
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_frogger/5366753753268224">
+                            <img id="scriptImg" src="../img/ives_frogger.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
