--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -154,6 +154,14 @@
                             <img id="scriptImg" src="../img/ives_frogger.png">
                         </a>
                     </div>
+                    <div id="scriptContainer">
+                        <h2>
+                            ives_Memory
+                        </h2>
+                        <a href="https://www.khanacademy.org/computer-programming/ives_memory/5932279415144448">
+                            <img id="scriptImg" src="../img/ives_memory.png">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
