--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -26,8 +26,8 @@
                                 </a>
                             </td>
                             <td>
-                                <a href="../pages/apps.html">
-                                    <img class="navButton" src="../img/apps.png" onmouseover="this.src='../img/appsHover.png';" onmouseout="this.src='../img/apps.png';">
+                                <a href="../pages/Final.html">
+                                    <img class="navButton" src="../img/Final.png" onmouseover="this.src='../img/finalHover.png';" onmouseout="this.src='../img/Final.png';">
                                 </a>
                             </td>
                             <td>
