--- a/pages/javascript.html
+++ b/pages/javascript.html
@@ -26,8 +26,8 @@
                                 </a>
                             </td>
                             <td>
-                                <a href="../pages/apps.html">
-                                    <img class="navButton" src="../img/apps.png" onmouseover="this.src='../img/appsHover.png';" onmouseout="this.src='../img/apps.png';">
+                                <a href="../pages/final.html">
+                                    <img class="navButton" src="../img/final.png" onmouseover="this.src='../img/finalHover.png';" onmouseout="this.src='../img/final.png';">
                                 </a>
                             </td>
                             <td>
